# SDL-1.2

./: CMakeLists.txt  CMakeSettings.json  README.md  launch.vs.json
src/: xflame.c
src/EAudioLib/Scumm/backends/midi/: adlib.cpp
src/EAudioLib/Scumm/backends/sdl/: sdl-common.cpp  sdl-common.h  sdl-symbian.cpp  sdl-symbian.h  sdl.cpp
src/EAudioLib/Scumm/common/: config-manager.cpp  config-manager.h  debugger.cpp  debugger.h  file.cpp  file.h  list.h  map.h  md5.cpp  md5.h  savefile.cpp  savefile.h  scaler.cpp  scaler.h  scummsys.h  singleton.h  stdafx.h  str.cpp  str.h  system.cpp  system.h  timer.cpp  timer.h  util.cpp  util.h
src/EAudioLib/Scumm/common/scaler/: 2xsai.cpp  aspect.cpp  hq2x.cpp  hq2x.h  hq3x.cpp  hq3x.h  intern.h
src/EAudioLib/Scumm/sound/: audiocd.cpp  audiocd.h  audiostream.cpp  audiostream.h  fmopl.cpp  fmopl.h  linearrate.h  mididrv.cpp  mididrv.h  midiparser.cpp  midiparser.h  midiparser_eup.cpp  midiparser_ro.cpp  midiparser_smf.cpp  midiparser_xmidi.cpp  mixer.cpp  mixer.h  mp3.cpp  mp3.h  mpu401.cpp  mpu401.h  rate.cpp  rate.h  resample.cpp  resample.h  voc.cpp  voc.h  vorbis.cpp  vorbis.h
src/EAudioLib/epoc/: audiolib.mmp  bld.inf
src/EAudioLib/inc/: audioconvert.h  audioplayer.h  eaudiolib.h  tiny_sdl.h
src/EAudioLib/src/: Audiolib.cpp  Tinysdl.cpp  audioconvert.cpp  audioplayer.cpp
src/SDL/: README.Epoc  mkinstalldirs
src/SDL/Epoc/: SdlMain.mmp  bld.inf  loopwave.mmp  sdl.mmp
src/SDL/include/: SDL_byteorder.h  SDL_error.h  SDL_events.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_syswm.h  SDL_thread.h  SDL_types.h  begin_code.h
src/SDL/src/: SDL.c  SDL_error.c  SDL_error_c.h  SDL_fatal.c  SDL_fatal.h
src/SDL/src/audio/: SDL_audio.c  SDL_audio_c.h  SDL_audiocvt.c  SDL_audiodev.c  SDL_audiodev_c.h  SDL_audiomem.c  SDL_audiomem.h  SDL_mixer.c  SDL_sysaudio.h  SDL_wave.c  SDL_wave.h
src/SDL/src/audio/Epoc/: SDL_epocaudio.cpp  SDL_epocaudio.h  SDL_epocaudiosync.cpp  SDL_epocaudiosync.h
src/SDL/src/cdrom/: SDL_cdrom.c  SDL_syscdrom.h
src/SDL/src/cdrom/freebsd/: SDL_syscdrom.c
src/SDL/src/cdrom/linux/: SDL_syscdrom.c
src/SDL/src/cdrom/macos/: SDL_syscdrom.c
src/SDL/src/cdrom/openbsd/: SDL_syscdrom.c
src/SDL/src/cdrom/qnx/: SDL_syscdrom.c
src/SDL/src/cdrom/symbian/: SDL_syscdrom.c
src/SDL/src/cdrom/win32/: SDL_syscdrom.c
src/SDL/src/endian/: SDL_endian.c
src/SDL/src/events/: SDL_active.c  SDL_events.c  SDL_events_c.h  SDL_expose.c  SDL_keyboard.c  SDL_mouse.c  SDL_quit.c  SDL_resize.c  SDL_sysevents.h
src/SDL/src/file/: SDL_rwops.c
src/SDL/src/joystick/: SDL_joystick.c  SDL_joystick_c.h  SDL_sysjoystick.h
src/SDL/src/joystick/beos/: SDL_bejoystick.cc
src/SDL/src/joystick/dummy/: SDL_sysjoystick.c
src/SDL/src/joystick/linux/: SDL_sysjoystick.c
src/SDL/src/joystick/macos/: SDL_sysjoystick.c
src/SDL/src/joystick/win32/: SDL_mmjoystick.c
src/SDL/src/main/beos/: SDL_BeApp.cc  SDL_BeApp.h
src/SDL/src/main/macos/: SDL_main.c
src/SDL/src/thread/: SDL_systhread.h  SDL_thread.c  SDL_thread_c.h
src/SDL/src/thread/Epoc/: SDL_sysmutex.cpp  SDL_syssem.cpp  SDL_systhread.cpp  SDL_systhread_c.h
src/SDL/src/thread/generic/: SDL_syscond.c  SDL_syscond_c.h  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_syssem.c  SDL_syssem_c.h  SDL_systhread.c
src/SDL/src/timer/: SDL_systimer.h  SDL_timer.c  SDL_timer_c.h
src/SDL/src/timer/amigaos/: SDL_systimer.c
src/SDL/src/timer/beos/: SDL_systimer.c
src/SDL/src/timer/epoc/: SDL_systimer.cpp
src/SDL/src/timer/linux/: SDL_systimer.c
src/SDL/src/timer/macos/: SDL_MPWtimer.c  SDL_systimer.c
src/SDL/src/timer/win32/: SDL_systimer.c
src/SDL/src/video/: SDL_RLEaccel.c  SDL_RLEaccel_c.h  SDL_blit.c  SDL_blit.h  SDL_blit_0.c  SDL_blit_1.c  SDL_blit_A.c  SDL_blit_N.c  SDL_bmp.c  SDL_cursor.c  SDL_cursor_c.h  SDL_gamma.c  SDL_leaks.h  SDL_memops.h  SDL_pixels.c  SDL_pixels_c.h  SDL_stretch.c  SDL_stretch_c.h  SDL_surface.c  SDL_sysvideo.h  SDL_video.c  SDL_yuv.c  SDL_yuv_mmx.c  SDL_yuv_sw.c  SDL_yuv_sw_c.h  SDL_yuvfuncs.h  blank_cursor.h  default_cursor.h
src/SDL/src/video/Epoc/: SDL_epocevents.cpp  SDL_epocevents_c.h  SDL_epocvideo.cpp  SDL_epocvideo.h
src/SDL/test/: configure  graywin.c  loopwave.c  testalpha.c
src/SDL_epocruntime/BMARM/: SDL_EPOCRUNTIMEU.DEF
src/SDL_epocruntime/BWINS/: SDL_EPOCRUNTIMEU.DEF
src/SDL_epocruntime/group/: bld.inf  sdl_epocruntime.mmp
src/SDL_epocruntime/inc/: sdl_epocruntime.h
src/SDL_epocruntime/src/: SDL_epocruntime.cpp
src/include/: bitdraw.h  linereader.h
